tests/macros/empty-signature-fail.rs
#[grappler::hook(signature = "")]
pub fn foo() {}

pub fn main() {}
